deploy/dev/03_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: feeplugin
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: fee.vultisigplugin.app
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: server
                port:
                  number: 80
